--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
-ul{
-  margin:0px;
+
+ul {
+  margin: 0px;
   padding: 0px;
   list-style: none;
 }
@@ -14,11 +14,13 @@ a {
 }
 
 .header-br {
-  background-color: #000; 
+  background-color: #000;
 }
 
 .header {
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
@@ -28,8 +30,10 @@ a {
   margin-right: auto
 }
 
-.header-menu  {
+.header-menu {
   display: flex;
+  flex-wrap: wrap;
+  ;
   gap: 20px;
 }
 
@@ -38,4 +42,51 @@ a {
   display: inline-block;
   color: #fff;
   font-size: 18px;
+  position: relative;
+}
+
+.header-menu a:after {
+  content: '';
+  display: block;
+  height: 2px;
+  width: 0%;
+  background: #fff;
+  margin-top: 4px;
+  transition: .3s;
+  position: absolute;
+}
+
+.header-menu a:hover:after {
+  width: 100%;
+}
+
+
+@media (max-width: 800px) {
+  .header-menu {
+    gap: 20px;
   }
+  .header-menu a:after {
+    display: none;
+  }
+
+  .header-menu a {
+    background: #111111;
+    padding: 12px 16px;
+    border-radius: 4px;
+  }
+
+  .header-menu a:hover {
+    background-color: #2e2e2e;
+  }
+}
+
+@media (max-width: 600px) {
+  .header-menu {
+    gap: 12px;
+  }
+
+  .header-menu a {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
+}
