--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,6 @@
 /* Home */
 @import "./home/introducao.css";
 @import "./home/tecnologia.css";
+@import "./home/parceiros.css";
 
 @import "./bicicletas/bicicleta-lista.css"
