parte de depoimentos está ok

--- a/css/style.css
+++ b/css/style.css
@@ -11,5 +11,6 @@
 @import "./home/introducao.css";
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
+@import "./home/depoimento.css";
 
 @import "./bicicletas/bicicleta-lista.css"
