--- a/css/style.css
+++ b/css/style.css
@@ -12,5 +12,6 @@
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
+@import "./seguros/seguros.css";
 
 @import "./bicicletas/bicicleta-lista.css"
