--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import "./utilidades/cores.css";
 
 @import "./global/header.css";
+@import "./global/footer.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
@@ -14,4 +15,4 @@
 @import "./home/depoimento.css";
 @import "./seguros/seguros.css";
 
-@import "./bicicletas/bicicleta-lista.css"
+@import "./bicicletas/bicicleta-lista.css";
