--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
-@import "./seguros/seguros.css";
 
 @import "./bicicletas/bicicleta-lista.css";
+
+@import "./seguros/seguros.css";
+
+@import "./termos/termos.css";
