--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -50,6 +50,29 @@
   color: var(--cor-0);
 }
 
+.titulo-bg {
+  padding-top: 60PX;
+  padding-bottom: 60px;
+  background-color: var(--cor-11);
+}
+
+.titulo p{
+  margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+   .titulo-bg {
+     padding-top: 40px;
+     padding-bottom: 40px;
+   }
+
+   .titulo p {
+     font-size: 1rem;
+      text-transform: lowercase;
+      font-weight: 400;
+    }
+}
+
 @media (max-width: 600px) {
   .botao {
     padding: 12px 16px;
