--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 @import "./home/depoimento.css";
 
 @import "./bicicletas/bicicleta-lista.css";
+@import "./bicicletas/bicicletas.css";
 
 @import "./seguros/seguros.css";
 
