finalizada a página de seguros

--- a/css/style.css
+++ b/css/style.css
@@ -18,5 +18,7 @@
 @import "./bicicletas/bicicletas.css";
 
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
 
 @import "./termos/termos.css";
