--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@
 @import "./bicicletas/bicicleta-lista.css";
 @import "./bicicletas/bicicletas.css";
 
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
