--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /* Home */
 @import "./home/introducao.css";
@@ -25,3 +26,6 @@
 @import "./seguros/perguntas.css";
 
 @import "./termos/termos.css";
+
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
