--- a/css/contato/lojas.css
+++ b/css/contato/lojas.css
@@ -25,11 +25,12 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 32px 16px;
+  padding: 32px;
 }
 
 .lojas-conteudo h3,
 .lojas-tempo {
-  grid-column: 1/-1 ;
+  grid-column: 1/-1;
 }
 
 .lojas-dados {
@@ -55,6 +56,12 @@
     margin-bottom: 32px;
   }
   .lojas-conteudo {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 600px) {
+  .lojas {
     grid-template-columns: 1fr;
   }
 }
