--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import "./global/global.css";
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
+@import "./utilidades/animacao.css";
 
 @import "./global/header.css";
 @import "./global/footer.css";
@@ -29,3 +30,5 @@
 
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
+
+@import "./orcamento/orcamento.css";
